# Labs

./: .gitignore
kr2_gr4_ulnirova_polina/: CMakeLists.txt  _tests.cpp  bidirectional_list_on_array.h  file_reader.h  input.txt  vocabulary.h  word_card.h
lab4_a/: CMakeLists.txt  main.cpp
lab4_b/: CMakeLists.txt  main.cpp
lab6Class/: CMakeLists.txt  Fraction.cpp  main.cpp
lab6Class/src/: CMakeLists.txt  Fraction.cpp  Fraction.h
lab6Class/test/: number_tests.cpp
laba3_1/: CMakeLists.txt  main.cpp
laba5/: CMakeLists.txt  main.cpp
laba_4_project_A/: CMakeLists.txt  main.cpp
laba_4_project_B/: CMakeLists.txt  main.cpp
laba_7/: CMakeLists.txt  Student.cpp  Student.h  StudentAfterFirstSession.cpp  StudentAfterSecondSession.cpp  StudentAfterSecondSession.h  main.cpp
laba_7/src/: CMakeLists.txt  Student.cpp  Student.h  StudentAfterFirstSession.cpp  StudentAfterFirstSession.h  StudentAfterSecondSession.cpp  StudentAfterSecondSession.h
laba_7/test/: number_tests.cpp
lection/: CMakeLists.txt  main.cpp
massiv1/: CMakeLists.txt  main.cpp
massiv1-2/: CMakeLists.txt  main.cpp
proba_massiv/: CMakeLists.txt  main.cpp
stack/: Calculator.h  StackForCalculator.h  main.cpp
untitled1/: main.cpp
